<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.login.LoginActivity">

    <!--<CheckBox
        android:id="@+id/checkBox"
        android:layout_width="133dp"
        android:layout_height="32dp"
        android:text="@string/remember_me"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598"
        tools:ignore="MissingConstraints" />-->

    <EditText
        android:id="@+id/username"
        android:layout_width="236dp"
        android:layout_height="39dp"
        android:layout_marginTop="336dp"
        android:autofillHints="NickName"
        android:textColor="@color/colorAccent"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/colorAccent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="236dp"
        android:layout_height="39dp"
        android:layout_marginTop="392dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/colorAccent"/>

    <Button
        android:id="@+id/register"
        android:layout_width="254dp"
        android:layout_height="42dp"
        android:background="@drawable/sign_in_button_shape"
        android:text="@string/action_sign_in"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.387"
        tools:ignore="MissingConstraints"
        tools:text="@string/action_sign_in" />

    <Button
        android:id="@+id/btmContinueWithGoogle"
        android:layout_width="186dp"
        android:layout_height="31dp"
        android:background="@drawable/sign_in_button_shape"
        android:text="@string/continue_with_google"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.142"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="361dp"
        android:layout_height="308dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btmContinueWithGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/look"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="576dp"
        android:contentDescription="@string/bottom_image"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/wave"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="164dp"
        android:layout_height="32dp"
        android:layout_marginStart="212dp"
        android:layout_marginLeft="212dp"
        android:text="@string/forgot_my_password"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.142"
        tools:ignore="SmallSp" />

    <!--<ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/swipeLeft"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/arrow_btm_right"
        app:layout_constraintStart_toStartOf="@+id/swipeLeft"
        app:layout_constraintTop_toTopOf="@+id/register"
        tools:ignore="MissingConstraints" />-->

    <!--<TextView
        android:id="@+id/swipeLeft"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/swipeRight"
        android:textColor="@color/colorPrimary"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        tools:ignore="MissingConstraints" />-->

    <Button
        android:id="@+id/swipRight"
        android:layout_width="252dp"
        android:layout_height="34dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/transparent_button_shape"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register" />

    <!--<Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btmContinueWithGoogle"
        app:layout_constraintVertical_bias="0.13" />-->

    <!--<FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>